# sms-activate-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  debug.json  pyproject.toml  pyrightconfig.json  setup.py  test.html
async_sms_activate/: activation.py  errors.py
sms_activate_api/: __init__.py  __init__.pyi  _metadata.py  activation.py  activation.pyi  client.py  client.pyi  country.py  country.pyi  enums.py  enums.pyi  errors.py  errors.pyi  logger.py  logger.pyi
